--- a/.github/workflows/build-distribute-mp.yml
+++ b/.github/workflows/build-distribute-mp.yml
@@ -21,6 +21,11 @@ on:
         description: "Enable cache to GitHub Actions cache backend"
         required: false
         default: false
+      cache-warmup:
+        type: boolean
+        description: "Enable cache warmup if cache is enabled"
+        required: false
+        default: false
       cache-scope:
         type: string
         description: "Which scope cache object belongs to if cache enabled (default is target name)"
@@ -291,6 +296,7 @@ jobs:
     steps:
       -
         name: Environment variables
+        if: ${{ inputs.cache && inputs.cache-warmup }}
         run: |
           for l in "${{ inputs.envs }}"; do
             echo "${l?}" >> $GITHUB_ENV
@@ -298,12 +304,13 @@ jobs:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-        if: ${{ inputs.setup-qemu }}
+        if: ${{ inputs.cache && inputs.cache-warmup && inputs.setup-qemu }}
         with:
           image: ${{ inputs.qemu-image }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        if: ${{ inputs.cache && inputs.cache-warmup }}
         with:
           version: ${{ inputs.buildx-version }}
           driver-opts: ${{ inputs.buildx-driver-opts }}
@@ -314,7 +321,7 @@ jobs:
       -
         name: Warm up cache
         uses: docker/build-push-action@v6
-        if: ${{ inputs.cache }}
+        if: ${{ inputs.cache && inputs.cache-warmup }}
         with:
           add-hosts: ${{ inputs.build-add-hosts }}
           allow: ${{ inputs.build-allow }}
@@ -499,6 +506,7 @@ jobs:
         env:
           PLATFORM: ${{ matrix.platform }}
           INPUT_CACHE: ${{ inputs.cache }}
+          INPUT_CACHE-WARMUP: ${{ inputs.cache-warmup }}
           INPUT_CACHE-SCOPE: ${{ inputs.cache-scope }}
           INPUT_CACHE-MODE: ${{ inputs.cache-mode }}
           INPUT_SET-META-ANNOTATIONS: ${{ inputs.set-meta-annotations }}
@@ -510,6 +518,7 @@ jobs:
           script: |
             const platformPair = process.env.PLATFORM.replace(/\//g, '-');
             const inpCache = core.getBooleanInput('cache');
+            const inpCacheWarmup = core.getBooleanInput('cache-warmup');
             const inpCacheScope = core.getInput('cache-scope');
             const inpCacheMode = core.getInput('cache-mode');
             const inpSetMetaAnnotations = core.getBooleanInput('set-meta-annotations');
@@ -519,7 +528,12 @@ jobs:
             const inpBuildTarget = core.getInput('build-target');
 
             if (inpCache) {
-              core.setOutput('cache-from', `type=gha,scope=${inpCacheScope || inpTarget || 'buildkit'}-warmup\ntype=gha,scope=${inpCacheScope || inpTarget}-${platformPair}`);
+              let cacheFrom = '';
+              if (inpCacheWarmup) {
+                cacheFrom = `type=gha,scope=${inpCacheScope || inpTarget || 'buildkit'}-warmup\n`;
+              }
+              cacheFrom += `type=gha,scope=${inpCacheScope || inpTarget}-${platformPair}`;
+              core.setOutput('cache-from', cacheFrom);
               core.setOutput('cache-to', `type=gha,scope=${inpCacheScope || inpTarget || 'buildkit'}-${platformPair},mode=${inpCacheMode}`);
             }
             if (inpSetMetaAnnotations) {
