--- a/.github/workflows/pr-assign-author.yml
+++ b/.github/workflows/pr-assign-author.yml
@@ -14,24 +14,39 @@ jobs:
           script: |
             const dt = context.payload?.pull_request;
             if (!dt) {
-              core.info('No pull request payload found, skipping.');
+              core.warning('No pull request payload found, skipping.');
               return;
             }
 
             const { assignees, number, user: { login: author, type } } = dt;
             if (assignees.length > 0) {
-              core.info('Pull request is already assigned to someone, skipping.');
+              core.warning('Pull request is already assigned to someone, skipping.');
               return;
             } else if (type !== 'User') {
-              core.info('Not a user, skipping.');
+              core.warning('Not a user, skipping.');
               return;
             }
 
-            const result = await github.rest.issues.addAssignees({
+            const resp = await github.rest.issues.checkUserCanBeAssignedToIssue({
+              ...context.repo,
+              issue_number: number,
+              assignee: author
+            });
+            core.debug(`checkUserCanBeAssignedToIssue resp: ${JSON.stringify(resp, null, 2)}`);
+            if (resp.status !== 204) {
+              core.warning(`Cannot assign @${author} to the pull request #${number}, skipping.`);
+              return;
+            }
+
+            const resp = await github.rest.issues.addAssignees({
               ...context.repo,
               issue_number: number,
               assignees: [author]
             });
+            core.debug(`addAssignees resp: ${JSON.stringify(resp, null, 2)}`);
+            if (resp.status !== 201) {
+              core.setFailed(`Failed to assign @${author} to the pull request #${number}`);
+              return;
+            }
 
-            core.debug(JSON.stringify(result, null, 2));
             core.info(`@${author} has been assigned to the pull request #${number}`);
