set contents read as default workflow permissions

--- a/.github/workflows/list-commits.yml
+++ b/.github/workflows/list-commits.yml
@@ -1,5 +1,9 @@
 name: list-commits
 
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions
+permissions:
+  contents: read
+
 on:
   workflow_call:
     inputs:
