--- a/.github/workflows/releases-json.yml
+++ b/.github/workflows/releases-json.yml
@@ -1,5 +1,9 @@
 name: releases-json
 
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions
+permissions:
+  contents: read
+
 on:
   workflow_call:
     inputs:
