pr-author-assign: print actual error message

--- a/.github/workflows/pr-assign-author.yml
+++ b/.github/workflows/pr-assign-author.yml
@@ -44,5 +44,5 @@ jobs:
 
               core.info(`@${author} has been assigned to the pull request #${number}`);
             } catch (e) {
-              core.warning(e);
+              core.warning(e.message);
             }
