--- a/.github/workflows/bake-distribute-mp.yml
+++ b/.github/workflows/bake-distribute-mp.yml
@@ -190,6 +190,10 @@ jobs:
       includes: ${{ steps.set.outputs.includes }}
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v4
+        if: ${{ inputs.bake-source == '.' }}
+      -
         name: Environment variables
         run: |
           for l in "${{ inputs.envs }}"; do
@@ -298,6 +302,10 @@ jobs:
   warmup:
     runs-on: ${{ inputs.runner == 'auto' && 'ubuntu-latest' || inputs.runner }}
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+        if: ${{ inputs.bake-source == '.' }}
       -
         name: Environment variables
         if: ${{ inputs.cache && inputs.cache-warmup }}
@@ -455,6 +463,10 @@ jobs:
       matrix:
         include: ${{ fromJson(needs.prepare.outputs.includes) }}
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+        if: ${{ inputs.bake-source == '.' }}
       -
         name: Environment variables
         run: |
