--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,6 +86,30 @@ jobs:
         run: |
           jq . buildx-releases-pin.json
 
+  releases-json-pattern:
+    uses: ./.github/workflows/releases-json.yml
+    with:
+      repository: moby/moby
+      artifact_name: moby-releases-json
+      filename: moby-releases.json
+      tag_pattern: '^docker-(.*)$'
+
+  releases-json-pattern-check:
+    runs-on: ubuntu-latest
+    needs:
+      - releases-json-pattern
+    steps:
+      -
+        name: Download
+        uses: actions/download-artifact@v5
+        with:
+          name: moby-releases-json
+          path: .
+      -
+        name: Check file
+        run: |
+          jq . moby-releases.json
+
   install-k3s:
     runs-on: ubuntu-latest
     steps:
