--- a/.github/workflows/bake-distribute-mp.yml
+++ b/.github/workflows/bake-distribute-mp.yml
@@ -604,9 +604,10 @@ jobs:
         uses: actions/github-script@v8
         env:
           INPUT_TARGET: ${{ inputs.target }}
+          INPUT_METADATA: ${{ steps.bake.outputs.metadata }}
         with:
           script: |
-            const metadata = JSON.parse(`${{ steps.bake.outputs.metadata }}`);
+            const metadata = JSON.parse(core.getInput('metadata'));
             const digest = metadata[core.getInput('target')]['containerimage.digest'];
             const outputKey = `digest_${{ matrix.index }}`;
             core.info(`Setting digest output: ${outputKey}=${digest}`);
